--- a/navigation.html
+++ b/navigation.html
@@ -47,7 +47,7 @@ limitations under the License
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <style>
 #view-source {
   position: fixed;
@@ -144,6 +144,7 @@ limitations under the License
       <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
         <a class="mdl-navigation__link" href="index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Overview</a>
         <a class="mdl-navigation__link" href="navigation.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">navigation</i>Navigation</a>
+        <a class="mdl-navigation__link" href="weather.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather</a>
         <a class="mdl-navigation__link" href="textchat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">chat</i>Textchat</a>
         <a class="mdl-navigation__link" href="videochat.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">videocam</i>Videochat</a>
         <div class="mdl-layout-spacer"></div>
