--- a/weather.html
+++ b/weather.html
@@ -48,6 +48,9 @@ limitations under the License
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
 <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<link rel="stylesheet" href="css/weather-icons.min.css">
+<link rel="stylesheet" href="css/weather-icons-wind.min.css">
 <style>
 #view-source {
   position: fixed;
@@ -58,51 +61,24 @@ limitations under the License
   margin-bottom: 40px;
   z-index: 900;
 }
-#my-video {
-  margin-top: 15px;
-  width: 280px;
-  height: auto;
-  background-color: #eee;
+#today {
+  font-size: 24px;
 }
-#their-video {
-  /* width: 100%;
-  height: 75%;
-  max-height: 480px; */
-  position: absolute;
- 	top:0;
- 	width: 100%;
- 	height: 100%;
-  background-color: #eee;
-}
-#video-container {
-  padding: 20px;
-  text-align: center;
-  z-index: 5
-}
-#logger {
-  z-index: 10
-}
-#step1-error, #step2, #step3 {
-  /* display: none; */
-}
-#my-id {
+#weather {
+  font-size: 32px;
   font-weight: bold;
-}
-#map {
-  height: 400px;
-  width: 100%;
-  background-color: #eee;
-}
-.demo-list-icon {
-  width: 300px;
 }
 </style>
 </head>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <body>
   <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Overview</span>
+        <span class="mdl-layout-title">Weather</span>
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
           <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
@@ -151,126 +127,49 @@ limitations under the License
       </nav>
     </div>
     <main class="mdl-layout__content mdl-color--grey-100">
-      <video id="their-video" autoplay></video>
-      <div class="mdl-grid mdl-shadow--2dp mdl-color--white">
-        <!-- Profile area -->
-        <div class="mdl-cell mdl-cell--3-col" id="profile">
-          <div class="mdl-card">
-            <div class="mdl-card__media">
-              <img src="images/dog.png" width="173" height="157" border="0" alt=""
-              style="padding:10px;">
-            </div>
-            <div class="mdl-card__supporting-text">
-              <!-- Simple list -->
-              <style>
-              .demo-list-item {
-                width: 300px;
-              }
-              </style>
-
-              <ul class="demo-list-item mdl-list">
-                <li class="mdl-list__item">
-                  <span class="mdl-list__item-primary-content">Name: </span>
-                </li>
-                <li class="mdl-list__item">
-                  <span class="mdl-list__item-primary-content">Age: </span>
-                </li>
-                <li class="mdl-list__item">
-                  <span class="mdl-list__item-primary-content">msg: </span>
-                </li>
-              </ul>
-            </div>
-            <!-- Map area -->
-            <div id="map"></div>
-            <script type="text/javascript">
-            var map;
-            function initMap() {
-              var tokyo = {lat: 35.681382, lng: 139.766084};
-              map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 15,
-                center: tokyo
-              });
-            }
-            function updateMap() {
-              if (jsonMetadata.latitude != null && jsonMetadata.longitude != null) {
-                var gps = {lat: Number(jsonMetadata.latitude), lng: Number(jsonMetadata.longitude)};
-                map.panTo(gps);
-                var marker = new google.maps.Marker({
-                  position: gps,
-                  map: map,
-                  animation: google.maps.Animation.BOUNCE
-                });
-              }
-            }
-            </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9QOIcdcpHQ-CVg_2YCQ-We7J2Z9-nNnI&callback=initMap"></script>
+      <div class="jumbotron">
+        <div id="today" class="text-primary text-center"></div>
+        <script type="text/javascript">
+        $('#today').text(new Date().toDateString());
+        </script>
+        <div id="weather" class="text-primary text-center" style="display:none;">
+          <div class="weather-info">
+            <i class="wi" id="icon"></i>
+            <span id="temp"></span><i class="wi wi-celsius"></i>
           </div>
-        </div>
-        <!-- Video area -->
-        <div class="mdl-cell mdl-cell--7-col" id="video-container">
-          <h3 id="RealtimeClock" ></h3>
-          <script type="text/javascript">
-          setInterval(function() {
-            var nowTime = new Date();
-            var date = nowTime.getFullYear() + "/" + ("0"+(nowTime.getMonth() + 1)).slice(-2) + "/" + ("0"+(nowTime.getDate())).slice(-2);
-            var time = ("0"+(nowTime.getHours())).slice(-2) + " : " + ("0"+(nowTime.getMinutes())).slice(-2) + " : " + ("0"+(nowTime.getSeconds())).slice(-2);
-            document.getElementById("RealtimeClock").innerHTML = date + "    " + time;
-          }, 1000);
-          </script>
-          <!-- <video id="their-video" autoplay></video> -->
-          <canvas id="display_canvas"></canvas>
-          <!-- <video id="my-video" muted="true" autoplay></video> -->
-        </div>
-
-        <!-- Steps -->
-        <div class="mdl-cell mdl-cell--2-col" id="logger">
-          <h2>Video Chat</h2>
-          <div class="select">
-            <label for="audioSource">Audio input source: </label><select id="audioSource"></select>
-          </div>
-
-          <div class="select">
-            <label for="videoSource">Video source: </label><select id="videoSource"></select>
-          </div>
-
-          <!-- Get local audio/video stream -->
-          <div id="step1">
-            <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
-            <div id="step1-error">
-              <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
-              <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a>
-            </div>
-          </div>
-
-          <!-- Make calls to others -->
-          <div id="step2">
-            <p>My ID: <span id="my-id">...</span></p>
-            <form id="make-call" class="pure-form">
-              <!-- Textfield with Floating Label -->
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" id="callto-id">
-                <label class="mdl-textfield__label" for="callto-id">Input call user ID...</label>
-              </div>
-              <!-- Accent-colored raised button with ripple -->
-              <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Call</button>
-            </form>
-          </div>
-
-          <!-- Call in progress -->
-          <div id="step3">
-            <p>Currently in call with <span id="their-id">...</span></p>
-            <!-- Accent-colored raised button with ripple -->
-            <button href="#" id="end-call" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">End Call</button>
-          </div>
-
-          <h5>List:</h5>
-          <ul class='demo-list-icon mdl-list' id="peerList">
+          <ul class="list-inline">
+            <li id="name" class="list-inline-item"></li>
+            <li id="desc" class="list-inline-item"></li>
           </ul>
-          <h5>Debug:</h5>
-          <div id="debug"></div>
-        </ul>
+        </div>
       </div>
-    </div>
+      <script type="text/javascript">
+      $(function () {
+        var API_KEY = 'f31ed1d2bcde371b7f7c769c07491313';
+        var city = 'Tokyo';
+        var url = 'http://api.openweathermap.org/data/2.5/weather?q=' + city + ',jp&units=metric&APPID=' + API_KEY;
+        $.getJSON(url, function(data) {
+          console.log(data);
+          if (!data.cod || data.cod != 200) {
+            return;
+          }
+
+          $("#desc").text(data.weather[0].description);
+          $("#temp").text(data.main.temp);
+          $("#name").text(data.name);
+
+          var id = data.weather[0].id;
+          var unixTime = Math.floor((new Date()).getTime() / 1000);
+          if (data.sys.sunrise <= unixTime && unixTime <= data.sys.sunset) {
+            $("#icon").addClass("wi-owm-day-" + id);
+          } else {
+            $("#icon").addClass("wi-owm-night-" + id);
+          }
+
+          $("#weather").show();
+        });
+      });
+    </script>
   </main>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
@@ -322,9 +221,5 @@ limitations under the License
 </svg>
 <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="render.js"></script>
 </body>
 </html>
